<resources>
    <string name="app_name">Virgil Messenger</string>

    <!--Login screen -->
    <string name="create_your_account">Create your account</string>
    <string name="it_take_a_few_seconds">It takes just a few seconds</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_in_progress">Signing in. Please wait...</string>
    <string name="login_failed">Signing failed. %s</string>

    <!-- Registration -->
    <string name="title_activity_registration">Registration</string>
    <string name="pick_username">Pick a username</string>
    <string name="registration_agreements">By registering, you agree to Virgil\'s <a href="https://virgilsecurity.com/terms-of-service">Terms of Service</a> and <a href="https://virgilsecurity.com/privacy-policy">Privacy Policy</a></string>
    <string name="registration_in_progress">Registering. Please wait...</string>
    <string name="registration_failed">Registration failed. %s</string>
    <string name="username">Username</string>
    <string name="next">Next</string>

    <!-- Main -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Conversation -->
    <string name="loading_conversation">Loading conversation. Please wait...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="title_conversations">Conversations</string>
    <string name="title_contacts">Contacts</string>
    <string name="logout">Logout</string>


</resources>
