<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.RegistrationFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/no_registered_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:layout_gravity="center" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_username"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLength="16"
            android:text=""/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:enabled="false"/>

        <TextView
            android:id="@+id/agreements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="@color/link_text_color"
            android:text="@string/registration_agreements"/>

    </android.support.v7.widget.LinearLayoutCompat>

</FrameLayout>
